--- a/EXO-12-055/EXO-12-055.bib
+++ b/EXO-12-055/EXO-12-055.bib
@@ -22,6 +22,22 @@
 ----  Do not escape the entire title as it will then clash with the journal style.
 ---- Journal names: the journals generally include the series in the journal name, "Physical Review D", vol 5, rather than PR D5
 
+@article{Khachatryan:2014vla,
+      author         = "Khachatryan, Vardan and others",
+      title          = "{Identification techniques for highly boosted W bosons
+                        that decay into hadrons}",
+      collaboration  = "CMS",
+      journal        = "JHEP",
+      volume         = "12",
+      year           = "2014",
+      pages          = "017",
+      doi            = "10.1007/JHEP12(2014)017",
+      eprint         = "1410.4227",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-JME-13-006, CERN-PH-EP-2014-241",
+      SLACcitation   = "%%CITATION = ARXIV:1410.4227;%%"
+}
 @article{Aad:2014vka,
       author         = "Aad, Georges and others",
       title          = "{Search for dark matter in events with a Z boson and
