--- a/EXO-12-055/ModelInterpretation.tex
+++ b/EXO-12-055/ModelInterpretation.tex
@@ -32,7 +32,7 @@ where EWSB is not present are denoted herein as \emph{fermionic} dark matter pro
 
 In collider experiments, the production of dark matter in spin-0 mediated interactions is predominantly through gluon-fusion via a top-quark loop. 
 When EWSB is present in the model, mono-V signatures are produced through the well known higgs-strahlung 
-process. For the spin-1 signatures, dark matter is produced in an analogous way to Z boson production through quark initiated processes. The mono-V or monojet signatures follow 
+process(figure~\ref{fig:monoXfeyn}). For the spin-1 signatures, dark matter is produced in an analogous way to Z boson production through quark initiated processes. The mono-V or monojet signatures follow 
 from the presence of a radiated V-boson or jet in the initial state. In all models, the coupling of the mediator to standard model coupling is taken as unity 
 ($g_{SM}=1$) along with 
 the dark matter coupling ($g_{DM}=1$). For the (pseudo-)scalar models, this denotes a Yukawa coupling to standard model particles. For all models considered, 
@@ -45,4 +45,19 @@ generated at leading order, showered with Pythia6 and passed through a
 simulation of the CMS detector using Geant4~\cite{geant4}. 
 For scalar and pseudoscalar mediated DM production, the finite top mass is 
 taken into account. 
+
+\begin{figure}[htbp]
+  \centering
+  \subfloat[][]{
+        \includegraphics[angle=0,width=0.36\textwidth]{figures/scalarbox.png}
+        \label{fig:monojet0}
+  }
+  \subfloat[][]{
+        \includegraphics[angle=0,width=0.36\textwidth]{figures/scalarV.png}
+        \label{fig:monoV0}
+  }
+  \caption{Diagrams for production of the monojet (a) and mono-V signature through Higgs-strahlung (b), through a scalar mediator.\label{fig:monoXfeyn}}
+\end{figure}
+
+
 
