--- a/EXO-12-055/results.tex
+++ b/EXO-12-055/results.tex
@@ -22,7 +22,7 @@ Agreement between the expected SM backgrounds and data is observed at the percen
  }
  \label{fig:post_fit_plots}\end{center}\end{figure*}
 
-Exclusion limits are set for a these models using the CLs method~\cite{cls} with a profile likelihood ratio as the 
+Exclusion limits are set for these models using the CLs method~\cite{cls} with a profile likelihood ratio as the 
 test-statistic in which systematic uncertainties are modelled as nuisance parameters. 
 For each signal hypothesis tested, upper limits are placed on the ratio of 
 the signal cross-section to the predicted cross-section, denoted as $\mu=\sigma/\sigma_{TH}$. Limits are presented in terms of excluded regions in the 
@@ -32,7 +32,7 @@ theoretical systematic uncertainties on the inclusive cross-section (20\% and 30
 PDF uncertainties are instead added as additional contours to the exclusion limits. These uncertainties are chosen to be conservative across the full range in mediator mass.
 
 To compare direct detection experiments with collider experiments, the direct detection bounds can be interpreted under the Lagrangians given in Equation~\ref{eq:LS}. The limits obtained in 
-the simplified models are obtained using the standard approaches to compute t-channel scattering~\cite{Kurylov:2003ra,Hisano:2010ct, Cheung:2013pfa,Buchmueller:2014yoa}. 
+the simplified models use the standard approaches to compute t-channel scattering~\cite{Kurylov:2003ra,Hisano:2010ct, Cheung:2013pfa,Buchmueller:2014yoa}. 
 For the vector and scalar mediator models, the limits are compared with the measurements by LUX~\cite{Akerib:2012ys,Akerib:2013tjd,Szydagis:2014xog} which currently 
 provides the strongest constraints for $m_{\rm{DM}} \gtrsim 6$ GeV. For axial-vector couplings, the limits are compared with 
 DM-proton-scattering limits from PICO-2L~\cite{Amole:2015lsj} , while for the pseudoscalar case, 
@@ -53,9 +53,9 @@ particle contribute to the width of the mediator. For all models, the width is f
 %For the vector mediator, the direct-detection bounds dominate above $m_{DM}=6$~\GeV, while for the axial-vector, scalar, pseudoscalar mediator models, the bounds 
 %
 Under the vector mediator model, the direct detection bounds dominate across most of the plane, while for the axial-vector, there is good complementarity between the direct detection limits and 
-those from this analysis. Limits in the scalar mediator scenario are much weaker than those from direct detection for small dark-matter masses. Additional sensitivity is gained
+those from this analysis. Limits in the scalar mediator scenario are more sensitive than those from direct detection for small dark-matter masses. Additional sensitivity is gained
 for larger mediator masses in this scenario above 350 \GeV due to the rise in cross-section of the gluon fusion loop process above the $t\bar{t}$ threshold. 
-In the pseudoscalar mediator scenario, the limits from this analysis exceed the reach in $m_{\mathrm{MED}}$ than those from FermiLAT.from this analysis dominate over the whole region. 
+In the pseudoscalar mediator scenario, the limits from this analysis exceed the reach in $m_{\mathrm{MED}}$ than those from FermiLAT over the whole region.
 
 \begin{figure}[htbp]
   \centering
@@ -111,7 +111,7 @@ limits obtained in this analysis dominate up to around $m_{\mathrm{DM}}=300$ \Ge
  
 The excess observed in FermiLAT data has led to speculations that dark matter annihilation is mediated by a light pseudoscalar~\cite{Calore:2014nla}. 
 The production mechanism for these $\gamma$ rays can be interpreted under dark matter annihilation to b-quarks allowing for direct 
-comparison limits from this analysis~\cite{Buchmueller:2015eea,Buckley:2014fba,Harris:2014hga}. Figure~\ref{fig:xslims_806} shows 
+comparison with limits from this analysis~\cite{Buchmueller:2015eea,Buckley:2014fba,Harris:2014hga}. Figure~\ref{fig:xslims_806} shows 
 the exclusion contours assuming pseudoscalar mediation in the plane of DM pair annihilation cross-section versus $m_{\textrm{DM}}$. 
 It is assumed that only heavy quarks (top and bottom quarks) contribute in the production of the mediator while for  
 the interpretation of the limits in the annihilation cross-section, it is assumed that the mediator only decays to b-quark pairs. 
