--- a/EXO-12-055/signalextraction_Safe.tex
+++ b/EXO-12-055/signalextraction_Safe.tex
@@ -1,6 +1,6 @@
 \section{Signal Extraction}
 The presence of DM production will be observable as an excess of events with respect to the expectations for the 
-SM backgrounds in a region at high missing transverse energy. Significant improvements in terms of sensitivity can be expected if 
+SM backgrounds in a region at high missing transverse energy in a combination of the 3 categories. Significant improvements in terms of sensitivity can be expected if 
 several bins in $\ETm$ are considered simultaneously. 
 A binned likelihood fit is performed in the range 250 \gev to 1000 \gev (or 200 \gev to 1000 \gev 
 for the monojet category), where the binning is chosen to ensure each corresponding bin of the control regions  
@@ -119,7 +119,7 @@ Shape and normalization systematic uncertainties from the recoil corrections app
 backgrounds are included to account for the uncertainty in the energy scale and resolution 
 of jets. Additionally, a systematic uncertainty of 4\% is included for the top backgrounds due to the uncertainty of 
 the b-tagging efficiency for the b-jet veto in the resolved category. Systematic uncertainties of 7\%, 10\% and 50\% are included for the top, diboson and QCD backgrounds respectively to account 
-for the uncertainty in their production cross-sections. Finally, a systematic uncertainty of 2.6\% in the luminosity measurement~\cite{lumi} is included for 
+for the uncertainty in their production cross-sections. These individual backgrounds have been separately in control regions and cofirm the quoted systematic uncertainty. Finally, a systematic uncertainty of 2.6\% in the luminosity measurement~\cite{lumi} is included for 
 all of the MC derived backgrounds.
 
 
