--- a/EXO-12-055/intro.tex
+++ b/EXO-12-055/intro.tex
@@ -14,7 +14,7 @@ The canonical ``monojet'' search provides a model-independent means of exploring
 related ``mono-V'' (V=W or Z boson) searches~\cite{monolep,monoZHbb,Aad:2014vka,Aad:2013oja,ATLAS:2014wra} target the associated production of DM with SM vector bosons, 
 which can be enhanced in theories with non-universal DM couplings~\cite{IVDM}.  The interpretation of results from these and other DM searches at 
 the Large Hadron Collider (LHC) have generally utilized effective field theories (EFT) that assume heavy mediators and DM production via contact interactions~\cite{Fox:2011pm}.  
-The results of this analysis are interpreted using the simplified DM models,~\cite{simplified1,Buchmueller:2013dya,Buchmueller:2014yoa}, compatible with the recent recommendation of the LHC DM forum~\cite{Abercrombie:2015wmb}, which span a broad range of 
+The results of this analysis are interpreted using the simplified DM models,~\cite{simplified1,Buchmueller:2013dya,Buchmueller:2014yoa}, compatible with the recent recommendation of the ATLAS-CMS LHC DM forum~\cite{Abercrombie:2015wmb}, which span a broad range of 
 mediator and DM particle properties. This allows for a comparison in sensitivity with respect to direct detection experiments while retaining validity as a description of DM 
 production across the entire kinematic region accessible at the LHC. 
 
