Fixing a few errors

--- a/EXO-12-055/signalextraction.tex
+++ b/EXO-12-055/signalextraction.tex
@@ -81,7 +81,7 @@ Shape and normalization systematic uncertainties from the recoil corrections app
 backgrounds are included to account for the uncertainty in the energy scale and resolution 
 of jets. Additionally, a systematic uncertainty of 4\% is included for the top backgrounds due to the uncertainty of 
 the b-tagging efficiency for the b-jet veto in the resolved category. Systematic uncertainties of 7\%, 10\% and 50\% are included for the top, diboson 
-and QCD backgrounds respectively to account for the uncertainty in their production cross-sections. These individual backgrounds have been separately in control regions and confirm the quoted systematic uncertainty. Finally, a systematic uncertainty of 2.6\% in the luminosity 
+and QCD backgrounds respectively to account for the uncertainty in their production cross-sections. These individual backgrounds have been studied separately using dedicated control regions in data in order to validate these systematic uncertainties. Finally, a systematic uncertainty of 2.6\% in the luminosity 
 measurement~\cite{lumi} is included for all of the MC derived backgrounds.
 
 
