--- a/EXO-12-055/selection.tex
+++ b/EXO-12-055/selection.tex
@@ -46,7 +46,7 @@ and the ca8 jet, $\Delta\phi(\mathrm{ak5,ca8})$, is smaller than 2, the event is
 with $p_T>30$ \gev and $|\eta|<2.5$, reconstructed at $\Delta R> 0.5$ with respect to the ca8 jet 
 are rejected.
 Figure~\ref{fig:boostvtagvars} shows the distributions of $\tau_2/\tau_1$ and $m_{\mathrm{prune}}$, (before the application 
-of the jet mass cut) in simulation and data for the boosted event category. Some disagreement is present in the modelling between data and Monte Carlo simulation, this is a known effect and covered they systematic uncertainties used in the analysis. A detailed discussion of the modelling can be found in ~\cite{Khachatryan:2014vla}.  
+of the jet mass cut) in simulation and data for the boosted event category. Some disagreement is present in the modelling between data and Monte Carlo simulation. This disagreement is well covered by the systematic uncertainties used in the analysis. A detailed discussion of the modelling can be found in ~\cite{Khachatryan:2014vla}.  
 \begin{figure*}[hbtp]\begin{center}
 \subfigure[]{
  \includegraphics[width=0.49\textwidth]{figures/t2t1_sig_baseline.pdf}
