Comments from Vitaliano

--- a/EXO-12-055/EXO-12-055.tex
+++ b/EXO-12-055/EXO-12-055.tex
@@ -66,6 +66,7 @@ pdfkeywords={CMS, physics, software, computing}}
 \maketitle %maketitle comes after all the front information has been supplied
 % >> Text
 \input{intro}
+\input{cms}
 \input{ModelInterpretation}
 \input{selection}
 \input{signalextraction}
