--- a/EXO-12-055/ModelInterpretation.tex
+++ b/EXO-12-055/ModelInterpretation.tex
@@ -20,7 +20,7 @@ The interactions are characterised by four distinct Lagrangians, written for a D
 \mathcal{L}_{\rm{axial}}&\supset\,  \frac{1}{2}m_{\rm MED}^2 Z''_{\mu} Z''^{\mu} - g_{\rm DM} Z''_{\mu} \bar{\chi}\gamma^{\mu}\gamma^5\chi -\sum_q g_{SM}^q Z''_{\mu} \bar{q}\gamma^{\mu}\gamma^5q - m_{\rm DM} \bar{\chi}\chi\,
 \end{align}
 
-assuming pure scalar, psuedoscalar, axial-vector and vector mediated interactions denoted by $S,~P,~Z'$ and $Z''$ mediators respectively. 
+assuming pure scalar, pseudoscalar, axial-vector and vector mediated interactions denoted by $S,~P,~Z'$ and $Z''$ mediators respectively. 
 The couplings $g_{DM}$ and $g_{SM}$ denotes the coupling of the mediator to the dark matter particle and to standard model particles respectively. 
 The choice of this split in the Lagrangian is to parallel the existing separation with direct detection, into spin-dependent and spin-independent interactions. 
 Here, spin-independent can refer to either vector or scalar mediated interactions, between which direct detection makes no distinction, while 
@@ -30,9 +30,9 @@ An extension to the scalar and pseudo-scalar can be performed by allowing the (p
 the Higgs mechanism~\cite{Khoze:2015sra,Hambye:2013sna,Khoze:2014xha,Khoze:2014woa,Altmannshofer:2014vra,Carone:2013wla,Heikinheimo:2013fta}. Scalar and pseudoscalar models 
 where EWSB is not present are denoted herein as \emph{fermionic} dark matter production.
 
-In collider experiments, the production of dark matter in spin-0 mediated interactions is predominantly through gluon-fusion via a top-quark loop. 
-When EWSB is present in the model, mono-V signatures are produced through the well known higgs-strahlung 
-process(figure~\ref{fig:monoXfeyn}). For the spin-1 signatures, dark matter is produced in an analogous way to Z boson production through quark initiated processes. The mono-V or monojet signatures follow 
+In collider experiments, the production of dark matter in spin-0 mediated interactions is predominantly through gluon-fusion via a top-quark loop (see Figure~\ref{fig:monojet0}). 
+When EWSB is present in the model, mono-V signatures are produced through a Higgs-strahlung like 
+process (see Figure~\ref{fig:monoV0}). For the spin-1 signatures, dark matter is produced in an analogous way to Z boson production through quark initiated processes. The mono-V or monojet signatures follow 
 from the presence of a radiated V-boson or jet in the initial state. In all models, the coupling of the mediator to standard model coupling is taken as unity 
 ($g_{SM}=1$) along with 
 the dark matter coupling ($g_{DM}=1$). For the (pseudo-)scalar models, this denotes a Yukawa coupling to standard model particles. For all models considered, 
