--- a/EXO-12-055/results.tex
+++ b/EXO-12-055/results.tex
@@ -35,10 +35,9 @@ To compare direct detection experiments with collider experiments, the direct de
 the simplified models use the standard approaches to compute t-channel scattering~\cite{Kurylov:2003ra,Hisano:2010ct, Cheung:2013pfa,Buchmueller:2014yoa}. 
 For the vector and scalar mediator models, the limits are compared with the measurements by LUX~\cite{Akerib:2012ys,Akerib:2013tjd,Szydagis:2014xog} which currently 
 provides the strongest constraints for $m_{\rm{DM}} \gtrsim 6$ GeV. For axial-vector couplings, the limits are compared with 
-DM-proton-scattering limits from PICO-2L~\cite{Amole:2015lsj} , while for the pseudoscalar case, 
-the comparison is made with constraints from FermiLAT~\cite{Ackermann:2011wa,Abdo:2010ex}.
+DM-proton-scattering limits from PICO-2L~\cite{Amole:2015lsj}..
 For pseudoscalar interactions, direct detection bounds are strongly velocity suppressed. 
-The most appropriate comparison is therefore to the most sensitive bounds from indirect detection from FermiLAT. 
+The most appropriate comparison is therefore to the most sensitive bounds from indirect detection from FermiLAT~\cite{Ackermann:2011wa,Abdo:2010ex}. 
 These limits apply to the scenario in which dark matter is annihilated in the center of a galaxy producing a $\gamma$ ray signature. 
 The results are also compared, for all four types of mediators, to constraints obtained from the observed cosmological relic density of DM as determined from 
 measurements of the cosmic microwave background by the WMAP and Planck experiments~\cite{Bennett:2003ba,Planck:2006aa}. The expected DM abundance is estimated, separately for each
@@ -115,9 +114,10 @@ comparison with limits from this analysis~\cite{Buchmueller:2015eea,Buckley:2014
 the exclusion contours assuming pseudoscalar mediation in the plane of DM pair annihilation cross-section versus $m_{\textrm{DM}}$. 
 It is assumed that only heavy quarks (top and bottom quarks) contribute in the production of the mediator while for  
 the interpretation of the limits in the annihilation cross-section, it is assumed that the mediator only decays to b-quark pairs. 
-Such a choice limits the sensitivity for direct 
-detection, however it allows for direct comparison between collider and direct detection without an additional assumptions 
-on the light quark couplings~\cite{Harris:2015kda}. As with all interpretations, the DM particle is assumed to be a Dirac fermion.
+%Such a choice limits the sensitivity for direct 
+%detection, however it allows for direct comparison between collider and direct detection without an additional assumptions 
+%on the light quark couplings~\cite{Harris:2015kda}. 
+As with all interpretations, the DM particle is assumed to be a Dirac fermion.
 The 68\% CL preferred regions in this plane assuming the annihilation of DM pairs to light-quarks (qq), tau or bottom pairs, using data from FermiLAT, 
 are shown as solid colour regions. Under the simplified model used, all of these regions are excluded by this analysis.
 
