--- a/EXO-12-055/signalextraction.tex
+++ b/EXO-12-055/signalextraction.tex
@@ -45,7 +45,7 @@ $R^{\gamma}_{i}$ account for the ratio of differential cross-sections between th
 and photon+jet processes and the efficiency times acceptance of the photon selection for 
 the photon plus jet control region. The differential boson $p_{T}$ cross-sections of 
 photon and Z production are first corrected using NLO k-factors derived by  
-comparing their $p_{T}$ distributions in events generated at single parton level with Madgraph5\_aMC@NLO~\cite{amcatnlo}, and subsequently showered,  
+comparing their $p_{T}$ distributions in events generated with Madgraph5\_aMC@NLO~\cite{amcatnlo}, and subsequently showered,  
 to the distributions produced at leading order before deriving the transfer factors. 
 
 Systematic uncertainties are modelled as constrained nuisance parameters, $\boldsymbol{\theta}$, which allow for variation of 
