--- a/EXO-12-055/intro.tex
+++ b/EXO-12-055/intro.tex
@@ -10,15 +10,15 @@ detector and correspond to an integrated luminosity of 19.7\fbinv.
 The existence of dark matter is one of the most compelling sources of evidence for physics beyond the Standard Model (SM) with a number of astrophysical observations 
 suggesting an abundance of a non-baryonic form of matter in the universe. In many theories which extend the SM, the production of DM particles in high-energy hadron-hadron 
 collisions, such as those produced at the Large Hadron Collider (LHC) is realised via a mediator which couples to both the SM and the DM particles.  
-The canonical ``monojet'' search provides a model-independent means of exploring DM production at the LHC~\cite{monojet1,monojet2} while 
-related ``mono-V'' (V=W or Z boson) searches~\cite{monolep,monoZHbb,Aad:2014vka,Aad:2013oja,ATLAS:2014wra} target the associated production of DM with SM vector bosons, 
+The ``monojet'' search provides a model-independent means of exploring DM production at the LHC~\cite{monojet1,monojet2} while 
+ ``mono-V'', V=W or Z boson, searches~\cite{monolep,Aad:2014vka,Aad:2013oja,ATLAS:2014wra} target the associated production of DM with SM vector bosons, 
 which can be enhanced in theories with non-universal DM couplings~\cite{IVDM}.  The interpretation of results from these and other DM searches at 
 the Large Hadron Collider (LHC) have generally utilized effective field theories (EFT) that assume heavy mediators and DM production via contact interactions~\cite{Fox:2011pm}.  
 The results of this analysis are interpreted using the simplified DM models,~\cite{simplified1,Buchmueller:2013dya,Buchmueller:2014yoa}, compatible with the recent recommendation of the ATLAS-CMS LHC DM forum~\cite{Abercrombie:2015wmb}, which span a broad range of 
 mediator and DM particle properties. This allows for a comparison in sensitivity with respect to direct detection experiments while retaining validity as a description of DM 
 production across the entire kinematic region accessible at the LHC. 
 
-The search is the first at CMS to target the hadronic decay modes of the vector bosons in the mono-V channels. A multivariate V-tagging technique is 
+This search is the first at CMS to target the hadronic decay modes of the vector bosons in the mono-V channels. A multivariate V-tagging technique is 
 employed to identify the individually resolved decay products of moderately boosted vector bosons. The exploration of mono-V production at high boost 
 utilises recently developed techniques designed to exploit information 
 available in the sub-structure of jets. The events are categorised according to the nature of the jets in the event and the signal extraction is performed by 
