--- a/EXO-12-055/selection.tex
+++ b/EXO-12-055/selection.tex
@@ -5,9 +5,9 @@ explicitly vetoing isolated leptons and photons. Events are
 reconstructed with the CMS detector, following the standard CMS reconstruction~\cite{CMSdetector}. 
 
 The data used for this analysis are collected using either of two triggers designed to record events containing large \ETm. The first requires an \ETm of greater than 120 \gev, calculated only using information from the calorimeter, 
-while the second requires an \ETm greater than 95~\gev or 105~\gev, depending on the data-taking period, calculated using the online version of 
-the particle flow (PF) reconstruction algorithm~\cite{CMS-PAS-PFT-09-001} as well as a reconstructed well identified jet with \pt$>80$ \gev and $|\eta|<2.6$. 
-The threshold on the \ETm for the selection of the events is set at 200 \gev in order to maintain a trigger efficiency greater than 
+while the second requires an \ETm greater than 95~\gev or 105~\gev, depending on the data-taking period, calculated using  
+the particle flow (PF) reconstruction algorithm~\cite{CMS-PAS-PFT-09-001} as well as jet with \pt$>80$ \gev and $|\eta|<2.6$. 
+The lowest threshold on the \ETm for the selection of the events is set at 200 \gev in order to maintain a trigger efficiency greater than 
 $99$\% with respect to the full event selection. 
 
 Jets are reconstructed from the clustering of PF objects using either the 
@@ -21,7 +21,7 @@ The \ETm is calculated as the magnitude of the negative
 vector sum of the transverse momenta of all final state particles, which are reconstructed 
 using the particle-flow (PF) algorithm~\cite{CMS-PAS-PFT-09-001}.
 Events with a large mis-reconstructed offline \ETm are removed by applying quality filters. 
-The angle between the \ETm and the leading jet is required to be larger than 2 to reduce the contribution from multijet QCD events. 
+The angle between the \ETm and the leading jet in the plane transverse to the beam line, $\Delta\phi$, is required to be larger than 2 to reduce the contribution from multijet QCD events. 
 Finally, events are vetoed if they contain at least one well-identified and isolated electron, photon or muon with $p_T>10$~\gev, or a tau with $p_T>15$~\gev.
 
 Selected events are classified into three event categories, based on the topology of the jets, in order to distinguish between 
@@ -34,9 +34,8 @@ If the vector boson decays hadronically and has sufficiently high transverse mom
 decay products are captured by a single reconstructed ``fat''-jet.
 Events in the boosted vector boson category are required to
 have a reconstructed ca8 jet with $\pt>200$ \gev and  $\ETm>250$ \gev.  Further cuts are applied to improve the vector boson jet
-purity by cutting on the variable ``N-subjettiness'' for 2-pronged
-jets ( $\tau_2/\tau_1$ defined in~\cite{Thaler:2010tr,Thaler:2011gf})
-and the pruned jet mass~\cite{Ellis:2009me}. The $\tau_2/\tau_1$ ratio
+purity by cutting on the variable ``N-subjettiness'' ($\tau_2/\tau_1$ defined in~\cite{Thaler:2010tr,Thaler:2011gf}), which identifies jets with a 
+two sub-jet topology, and the pruned jet mass~\cite{Ellis:2009me}. The $\tau_2/\tau_1$ ratio
 is required to be smaller than 0.5 and the pruned jet mass, $m_{\mathrm{prune}}$, is selected to
 be close to both the W and Z boson masses, namely to satisfy $60<m_{\mathrm{prune}}<110$ \gev.   
 Events which contain additional jets close to the ca8 jet, but no closer than $\Delta R < 0.5$,
@@ -55,7 +54,7 @@ of the jet mass cut) in simulation and data for the boosted event category. Some
  \includegraphics[width=0.49\textwidth]{figures/mass_sig_nomasscut.pdf}
 }
  \caption{Distributions of $\tau_2/\tau_1$ before the jet mass cut (a) and pruned jet mass (b) for events in data and MC in the boosted event category. 
- A cut of $\tau_2/\tau_1<$0.5 is applied in figure b.}
+ A cut of $\tau_2/\tau_1<$0.5 has been applied in figure b.}
  \label{fig:boostvtagvars}\end{center}\end{figure*}
 
 %\subsection{Resolved V-tagged category}\label{sec:resvtagging}
@@ -102,7 +101,7 @@ using Madgraph~\cite{amcatnlo} interfaced with Pythia6~\cite{Sjostrand:2006za} f
 fragmentation, where jets from the matrix element are matched to the parton shower following the MLM matching prescription~\cite{Mangano:2006rw}.
 Additionally a single-top background sample, produced with
 POWHEG~\cite{powheg},  a set of diboson samples, produced directly
-with Pythia6, are added. All are processed using Geant4~\cite{geant4}, providing a full simulation of the CMS detector.
+with Pythia6, are added. 
 The MC samples are corrected to account for the distribution of the number of additional (pileup or PU) interactions
 observed in 2012 dataset. Both signal and background samples are additionally corrected to account for the mis-modelling of hadronic recoil in simulation following
 the procedure described in~\cite{CMS-PAS-JME-12-002}.
