updated twiki comments

--- a/EXO-12-055/EXO-12-055.bib
+++ b/EXO-12-055/EXO-12-055.bib
@@ -95,7 +95,7 @@
       volume         = 04,
       year           = 2008,
       pages          = 063,
-      doi            = 10.1088/1126-6708/2008/04/063,
+      doi            = "10.1088/1126-6708/2008/04/063",
       eprint         = 0802.1189,
       archivePrefix  = arXiv,
       primaryClass   = hep-ph,
@@ -234,16 +234,19 @@
       SLACcitation   = "%%CITATION = ARXIV:1409.2893;%%",
 }
 @article{Malik:2014ggr,
-      author         = "Malik, Sarah and McCabe, Christopher and Araujo, Henrique
-                        and Belyaev, A. and Boehm, Celine and others",
+      author         = "Malik, Sarah A. and others",
       title          = "{Interplay and Characterization of Dark Matter Searches
                         at Colliders and in Direct Detection Experiments}",
-      year           = "2014",
+      journal        = "Phys. Dark Univ.",
+      volume         = "9-10",
+      year           = "2015",
+      pages          = "51-58",
+      doi            = "10.1016/j.dark.2015.03.003",
       eprint         = "1409.4075",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
       reportNumber   = "KCL-PH-TH-2014-37, LCTS-2014-36, CERN-PH-TH-2014-180",
-      SLACcitation   = "%%CITATION = ARXIV:1409.4075;%%",
+      SLACcitation   = "%%CITATION = ARXIV:1409.4075;%%"
 }
 @article{Harris:2014hga,
   title = {Constraining dark sectors at colliders: Beyond the effective theory approach},
@@ -259,17 +262,20 @@
   doi            = "10.1103/PhysRevD.91.055009",
 }
 
-
 @article{Buckley:2014fba,
       author         = "Buckley, Matthew R. and Feld, David and Goncalves,
                         Dorival",
       title          = "{Scalar Simplified Models for Dark Matter}",
-      year           = "2014",
+      journal        = "Phys. Rev.",
+      volume         = "D91",
+      year           = "2015",
+      pages          = "015017",
+      doi            = "10.1103/PhysRevD.91.015017",
       eprint         = "1410.6497",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
       reportNumber   = "IPPP-14-92, DCPT-14-184",
-      SLACcitation   = "%%CITATION = ARXIV:1410.6497;%%",
+      SLACcitation   = "%%CITATION = ARXIV:1410.6497;%%"
 }
 @article{Hisano:2010ct,
       author         = "Hisano, Junji and Ishiwata, Koji and Nagata, Natsumi",
@@ -544,14 +550,21 @@ language={English}
       author         = "Aad, Georges and others",
       title          = "{Search for new phenomena in final states with an
                         energetic jet and large missing transverse momentum in pp
-                        collisions at $\sqrt{s}=8$ TeV with the ATLAS detector}",
+                        collisions at $\sqrt{s}=$8 TeV with the ATLAS detector}",
       collaboration  = "ATLAS",
+      journal        = "Eur. Phys. J.",
+      volume         = "C75",
       year           = "2015",
+      number         = "7",
+      pages          = "299",
+      doi            = "10.1140/epjc/s10052-015-3517-3,
+                        10.1140/epjc/s10052-015-3639-7",
+      note           = "[Erratum: Eur. Phys. J.C75,no.9,408(2015)]",
       eprint         = "1502.01518",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
       reportNumber   = "CERN-PH-EP-2014-299",
-      SLACcitation   = "%%CITATION = ARXIV:1502.01518;%%",
+      SLACcitation   = "%%CITATION = ARXIV:1502.01518;%%"
 }
 @article{photon_purity,
       author         = "Khachatryan, Vardan and others",
@@ -601,16 +614,21 @@ language={English}
       SLACcitation   = "%%CITATION = ARXIV:1404.1344;%%",
 }
 
-
-@UNPUBLISHED{IVDM,
-     author = "{Feng, J. {\em et al.}}",
-     title     = "{Isospin-Violating Dark Matter}",
-     eprint    = "1102.4331",
-     archivePrefix = "arXiv",
-     primaryClass  =  "hep-ph",
-     year  = "2011"
+@article{IVDM,
+      author         = "Feng, Jonathan L. and Kumar, Jason and Marfatia, Danny
+                        and Sanford, David",
+      title          = "{Isospin-Violating Dark Matter}",
+      journal        = "Phys. Lett.",
+      volume         = "B703",
+      year           = "2011",
+      pages          = "124-127",
+      doi            = "10.1016/j.physletb.2011.07.083",
+      eprint         = "1102.4331",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "UCI-TR-2011-03, UH511-1157-2011",
+      SLACcitation   = "%%CITATION = ARXIV:1102.4331;%%"
 }
-
 @ARTICLE{simplified1,
      author = "{Busoni, G. {\em et al.}}",
      title     = "{On the Validity of the Effective Field Theory for Dark Matter Searches at the LHC}",
@@ -652,9 +670,14 @@ language={English}
 }
 @article{Khoze:2015sra,
       author         = "Khoze, Valentin V and Ro, Gunnar and Spannowsky, Michael",
-      title          = "{Spectroscopy of Scalar Mediators to Dark Matter at the
+      title          = "{Spectroscopy of scalar mediators to dark matter at the
                         LHC and at 100 TeV}",
+      journal        = "Phys. Rev.",
+      volume         = "D92",
       year           = "2015",
+      number         = "7",
+      pages          = "075006",
+      doi            = "10.1103/PhysRevD.92.075006",
       eprint         = "1505.03019",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -749,9 +772,15 @@ language={English}
 @article{Buchmueller:2015eea,
       author         = "Buchmueller, Oliver and Malik, Sarah A. and McCabe,
                         Christopher and Penning, Bjoern",
-      title          = "{Constraining the Fermi-LAT excess with multi-jet plus
-                        MET collider searches}",
+      title          = "{Constraining Dark Matter Interactions with Pseudoscalar
+                        and Scalar Mediators Using Collider Searches for Multijets
+                        plus Missing Transverse Energy}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "115",
       year           = "2015",
+      number         = "18",
+      pages          = "181802",
+      doi            = "10.1103/PhysRevLett.115.181802",
       eprint         = "1505.07826",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -1155,7 +1184,7 @@ archivePrefix = "arXiv",
       reportNumber  = "CMS-PAS-JME-09-001",
       url           = "http://cds.cern.ch/record/1194489",
 }
-@techreport{CMS-PAS-JME-12-002,
+@techreport{CMS-PAS-JME-12-002X,
       title         = "{MET performance in 8 TeV data}",
       institution   = "CERN",
       collaboration = "CMS",
@@ -1163,7 +1192,23 @@ archivePrefix = "arXiv",
       number        = "CMS-PAS-JME-12-002",
       year          = "2013",
 }
-
+@article{CMS-PAS-JME-12-002,
+      author         = "Khachatryan, Vardan and others",
+      title          = "{Performance of the CMS missing transverse momentum
+                        reconstruction in pp data at $\sqrt{s}$ = 8 TeV}",
+      collaboration  = "CMS",
+      journal        = "JINST",
+      volume         = "10",
+      year           = "2015",
+      number         = "02",
+      pages          = "P02006",
+      doi            = "10.1088/1748-0221/10/02/P02006",
+      eprint         = "1411.0511",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      reportNumber   = "CMS-JME-13-003, CERN-PH-EP-2014-246",
+      SLACcitation   = "%%CITATION = ARXIV:1411.0511;%%"
+}
 @article{CMSdetector,
       author         = "Chatrchyan, S. and others",
       title          = "{The CMS experiment at the CERN LHC}",
