--- a/EXO-12-055/EXO-12-055.tex
+++ b/EXO-12-055/EXO-12-055.tex
@@ -47,7 +47,9 @@ with the CMS detector.}
 A search is presented for an excess of events with a large missing transverse momentum in association with a highly energetic jet in a data sample of proton-proton 
 interactions at centre-of-mass energy of 8TeV. The data correspond to an integrated luminosity of 19.7 $\textrm{fb}^{-1}$ collected by the CMS detector at the LHC.
 Additional sensitivity is achieved by tagging events consistent with the jet originating from a boosted hadronically decaying vector boson.   
-The results are interpreted in the context of a set of simplified models for the production of dark matter.
+The results are interpreted as a set of a searches for a new scalar,
+pseudoscalar, vector, and axial mediator that produces of dark
+matter. 
 }
 
 % >> PDF Metadata
