--- a/EXO-12-055/results.tex
+++ b/EXO-12-055/results.tex
@@ -26,10 +26,13 @@ Exclusion limits are set for these models using the CLs method~\cite{cls} with a
 test-statistic in which systematic uncertainties are modelled as nuisance parameters. 
 For each signal hypothesis tested, upper limits are placed on the ratio of 
 the signal cross-section to the predicted cross-section, denoted as $\mu=\sigma/\sigma_{TH}$. Limits are presented in terms of excluded regions in the 
-$m_{\mathrm{MED}}-m_{\textrm{DM}}$ plane, assuming the four different mediators, by determining the points for which $\mu\ge1$ is excluded at 90\% CL or more.
+$m_{\mathrm{MED}}-m_{\textrm{DM}}$ plane, assuming either scalar,
+pseudoscalar, vector, and axial-vector mediators, and determining the points for which $\mu\ge1$ is excluded at 90\% CL or more.
 Experimental systematic uncertainties, including jet and \ETm response and resolution, are included on the signal model as nuisance parameters, while the
 theoretical systematic uncertainties on the inclusive cross-section (20\% and 30\% for the vector and axial-vector, and scalar and pseudoscalar models respectively) due to QCD scale and 
-PDF uncertainties are instead added as additional contours to the exclusion limits. These uncertainties are chosen to be conservative across the full range in mediator mass.
+PDF uncertainties are instead added as additional contours to the
+exclusion limits. These uncertainties are chosen to be conservative
+across the full range in mediator mass from 10~\GeV to 3~\TeV.
 
 To compare direct detection experiments with collider experiments, the direct detection bounds can be interpreted under the Lagrangians given in Equation~\ref{eq:LS}. The limits obtained in 
 the simplified models use the standard approaches to compute t-channel scattering~\cite{Kurylov:2003ra,Hisano:2010ct, Cheung:2013pfa,Buchmueller:2014yoa}. 
@@ -48,13 +51,16 @@ Figure~\ref{fig:masslims} shows the 90\% CL exclusions for the vector, axial-vec
 scalar and pseudoscalar mediator models.  The 90\% confidence level upper limit on the ratio of excluded cross-section to the predicted cross-section ($\mu_{\textrm{up}}$), 
 when assuming the mediator only couples to fermions, is shown by the blue color scale. These limits are calculated under the assumption 
 that only the initial state partons and the DM 
-particle contribute to the width of the mediator. For all models, the width is fixed under the minimum width constraint~\cite{An:2012va,Abercrombie:2015wmb,Fox:2011pm,simplified1}. 
+particle contribute to the width of the mediator (minimum width constraint)~\cite{An:2012va,Abercrombie:2015wmb,Fox:2011pm,simplified1}. 
 %For the vector mediator, the direct-detection bounds dominate above $m_{DM}=6$~\GeV, while for the axial-vector, scalar, pseudoscalar mediator models, the bounds 
 %
 Under the vector mediator model, the direct detection bounds dominate across most of the plane, while for the axial-vector, there is good complementarity between the direct detection limits and 
-those from this analysis. Limits in the scalar mediator scenario are more sensitive than those from direct detection for small dark-matter masses. Additional sensitivity is gained
-for larger mediator masses in this scenario above 350 \GeV due to the rise in cross-section of the gluon fusion loop process above the $t\bar{t}$ threshold. 
-In the pseudoscalar mediator scenario, the limits from this analysis exceed the reach in $m_{\mathrm{MED}}$ than those from FermiLAT over the whole region.
+those from this analysis. Limits in the scalar mediator scenario are
+more sensitive than those from direct detection for small Dark Matter masses. Additional sensitivity is gained
+for larger mediator masses in this scenario above 350 \GeV due to the
+rise in cross-section of the gluon fusion loop process for masses
+greater than twice the
+top quark mass. In the pseudoscalar mediator scenario, the limits from this analysis exceed the reach in $m_{\mathrm{MED}}$ byeond those from FermiLAT over the whole region.
 
 \begin{figure}[htbp]
   \centering
@@ -96,7 +102,7 @@ In all of the mediator models, a minimum width is assumed\label{fig:masslims}.}
 %on the light quark couplings~\cite{Harris:2015kda}.
 Figures~\ref{fig:xslims_800},~\ref{fig:xslims_801} and~\ref{fig:xslims_805} show the same exclusion contours, this time translated into the 
 plane of $m_{\textrm{DM}}-\sigma_{\textrm{SI/SD}}$, where $\sigma_{\textrm{SI/SD}}$ are 
-the spin-independent/dependant (vector and scalar/axial-vector) DM-nucleon scattering 
+the spin-independent/dependent (vector and scalar/axial-vector) DM-nucleon scattering 
 cross-sections. These representations allow for a more direct comparison with limits from the direct-detection experiments which typically set 
 upper limits on these cross-sections~\cite{ Malik:2014ggr,Harris:2015kda}. It should be noted that the limits set from this 
 analysis are however only valid under the simplified model considered, and in particular 
@@ -105,14 +111,14 @@ assuming $g_{\textrm{DM}}=g_{\textrm{SM}}=1$. For the scalar model, it is assume
 detection, however it allows for direct comparison between collider and direct detection without an additional assumption 
 on the light quark couplings~\cite{Harris:2015kda}.  
 For the vector and scalar mediator models, direct-detection limits are stronger than 
-those obtained in this analysis except in the scenario where the dark matter mass is less than around 6 \GeV while for the axial-vector mediator model, the 
+those obtained in this analysis except in the scenario where the Dark Matter mass is less than around 6 \GeV. For the axial-vector mediator model, the 
 limits obtained in this analysis dominate up to around $m_{\mathrm{DM}}=300$ \GeV. 
  
-The excess observed in FermiLAT data has led to speculations that dark matter annihilation is mediated by a light pseudoscalar~\cite{Calore:2014nla}. 
-The production mechanism for these $\gamma$ rays can be interpreted under dark matter annihilation to b-quarks allowing for direct 
+The excess observed in FermiLAT data has led to speculations that Dark Matter annihilation is mediated by a light pseudoscalar~\cite{Calore:2014nla}. 
+The production mechanism for these $\gamma$ rays can be interpreted under Dark Matter annihilation to b-quarks allowing for direct 
 comparison with limits from this analysis~\cite{Buchmueller:2015eea,Buckley:2014fba,Harris:2014hga}. Figure~\ref{fig:xslims_806} shows 
 the exclusion contours assuming pseudoscalar mediation in the plane of DM pair annihilation cross-section versus $m_{\textrm{DM}}$. 
-It is assumed that only heavy quarks (top and bottom quarks) contribute in the production of the mediator while for  
+Again, it is assumed that only heavy quarks (top and bottom quarks) contribute in the production of the mediator while for  
 the interpretation of the limits in the annihilation cross-section, it is assumed that the mediator only decays to b-quark pairs. 
 %Such a choice limits the sensitivity for direct 
 %detection, however it allows for direct comparison between collider and direct detection without an additional assumptions 
