--- a/EXO-12-055/signalextraction.tex
+++ b/EXO-12-055/signalextraction.tex
@@ -1,11 +1,13 @@
 \section{Signal Extraction}
 
 The presence of DM production will be observable as an excess of events with respect to the expectations for the 
-SM backgrounds in a region at high missing transverse energy. Significant improvements in terms of sensitivity can be expected if 
-several bins in $\ETm$ are considered simultaneously. 
-A binned likelihood fit is performed in the range 250 \gev to 1000 \gev (or 200 \gev to 1000 \gev 
-for the monojet category), where the binning is chosen to ensure each corresponding bin of the control regions  
-is populated. The width of the highest $\ETm$ bin allows for ease of comparison to the previous CMS search~\cite{monojet1}. 
+SM backgrounds in a region at high missing transverse momentum. Significant improvements in terms of sensitivity can be expected if 
+several bins in $\ETm$ are considered simultaneously. Further
+improvement can be derived by adding control regions, regions orthogonal to
+signal with small amounts of signal them, to simultaneously
+constrain the predictions of the standard model background. A binned likelihood fit is performed in the range 250 \gev to 1000 \gev (or 200 \gev to 1000 \gev 
+for the monojet category), where the binning is chosen to ensure each
+corresponding bin of a set of control regions is populated. The width of the highest $\ETm$ bin allows for ease of comparison to the previous CMS search~\cite{monojet1}. 
 
 Data from three control regions, the dimuon and photon control regions, and the single-muon control region, are used to determine the contributions from \Zvvjets~and 
 \Wlvjets~respectively. The events in the control regions are divided into the three  categories, using the same selection criteria as 
@@ -19,13 +21,16 @@ A complementary approach is to use events in data that have a high-$p_{T}$
 photon recoiling against jets to further constrain the \Zvvjets~background template~\cite{CMS-PAS-SUS-08-002}. This is advantageous since the production cross-section 
 of \phojets~is roughly 3 times that of the \Zvvjets~resulting in a smaller statistical uncertainty on the predicted background. 
  
-The \ETm spectra of the V+jets backgrounds is determined through the use of a likelihood fit, simultaneously across all bins 
+The \ETm spectra of the V+jets backgrounds are determined through the use of a likelihood fit, simultaneously across all bins 
 in the three control regions. 
 The expected number of events $N_{i}$ in a given bin $i$ of fake \ETm, for a particular event category, is given by, 
 $N^{Z_{\mu\mu}|\gamma }_{i}=  \dfrac{{\mu^{\Zvv}_{i}}}{R^{Z|\gamma}_{i}}$, 
 for the dimuon and photon control regions and  $N^{W}_{i} =  \dfrac{{\mu^{\Wlv}_{i}}}{R^{W}_{i}}$,
 for the single-muon control region. The parameters $\boldsymbol{\mu}^{\Zvv}$ and $\boldsymbol{\mu}^{\Wlv}$ are the free parameters 
-of the likelihood representing the yields of $\Zvvjets$ and $\Wlvjets$ in each bin of the signal region. The likelihood function for a 
+of the likelihood representing the yields of $\Zvvjets$ and $\Wlvjets$
+in each bin of the signal region. The additional terms  $R^{W}_{i}$,
+$R^{Z|\gamma}_{i}$ denote transfer factors which account for the
+extrapolation of a sepcific background from the signal region to the control regions. The likelihood function for a 
 particular category, $c$, is given as,   
 
 \begin{align*}
@@ -55,7 +60,7 @@ Electroweak corrections to the ratio are not accounted for in the simulation. Th
 which is of the order of 15\% when the boson (Z or $\gamma$) \pt is at the TeV scale~\cite{Kuhn:2005gv}. A conservative choice is made in assuming 
 this uncertainty to be uncorrelated across bins of \ETm. Additionally, the uncertainty in the muon selection efficiency, photon selection efficiency, 
 and photon purity are included and fully correlated across the event categories and control regions, where relevant. A systematic uncertainty of 10\% 
-is included for the background normalization~\cite{tagkey2015250} and correlated between the single-muon and dimuon control regions. The results of a fit to the control regions are shown in Figure~\ref{fig:combined_fit_result}.
+is included for the top and diboson background normalizations~\cite{tagkey2015250} and correlated between the single-muon and dimuon control regions. The results of a fit to the control regions are shown in Figure~\ref{fig:combined_fit_result}.
  
 \begin{figure*}[hbtp]\begin{center}
  \includegraphics[width=0.32\textwidth]{figures/post_fit_photon_monojet.pdf}
@@ -80,8 +85,7 @@ The remaining backgrounds are expected to be much smaller than those from V+jets
 Shape and normalization systematic uncertainties from the recoil corrections applied to these 
 backgrounds are included to account for the uncertainty in the energy scale and resolution 
 of jets. Additionally, a systematic uncertainty of 4\% is included for the top backgrounds due to the uncertainty of 
-the b-tagging efficiency for the b-jet veto in the resolved category. Systematic uncertainties of 7\%, 10\% and 50\% are included for the top, diboson 
-and QCD backgrounds respectively to account for the uncertainty in their production cross-sections. These individual backgrounds have been studied separately using dedicated control regions in data in order to validate these systematic uncertainties. Finally, a systematic uncertainty of 2.6\% in the luminosity 
+the b-tagging efficiency for the b-jet veto in the resolved category. Systematic uncertainties of 7\%, 10\% and 50\% are included for the top~\cite{Khachatryan:2015oqa}, diboson~\cite{tagkey2015250,Khachatryan:2015sga} and QCD backgrounds~\cite{Khachatryan:2014rra} respectively to account for the uncertainty in their production cross-sections. These individual backgrounds have been studied separately using dedicated control regions in data in order to validate these systematic uncertainties. Finally, a systematic uncertainty of 2.6\% in the luminosity 
 measurement~\cite{lumi} is included for all of the MC derived backgrounds.
 
 
